--- a/overview.html
+++ b/overview.html
@@ -48,12 +48,12 @@ as being problematic or even broken. This is mainly for the following reasons:</
 Rather, serializers are library implementations that mostly depend
 on the reflection system to extrapolate serialization rules for
 each type (resulting in runtime errors if this is not possible).</p></li>
-<li><p>There is confusion as to which is the prefered design pattern for serialization.
+<li><p>There is confusion as to which is the prefered methodology for serialization.
 The BCL comes with a multitude of dated, unsafe, mutually exclusive
 and naturally inefficient patterns.</p></li>
 </ul>
 
-<h3>BCL Serialization patterns</h3>
+<h3>BCL Serialization methods</h3>
 
 <p>The BCL comes with the following patterns for defining serializable types:</p>
 
@@ -62,7 +62,7 @@ and naturally inefficient patterns.</p></li>
 of their fields. This behaviour is tuned by applying an assortment of attributes
 such as <code>Serialized</code>, <code>NonSerialized</code>, <code>OnSerializing</code>, <code>OnDeserialized</code>, etc and
 implementing the <code>IDeserializationCallback</code> interface. This is arguably the most
-loathed serialization pattern, since it is extremely sensitive to internal implementation details.
+loathed method, since it is sensitive to internal implementation details.
 Incidentally, this is the pattern of choice for most F# generated types.</p></li>
 <li><p>Property-based or <a href="http://msdn.microsoft.com/en-us/library/ms733127.aspx">DataContract</a> 
 serialization: objects are pickled by serializing the contents
@@ -81,9 +81,9 @@ exception types, whose metadata is impossible to replicate without <code>ISerial
 
 <h3>Serialization Libraries</h3>
 
-<p>The BCL ships with a couple of general-purpose serializer libraries but these either suffer
+<p>The BCL ships with a couple of general-purpose serializer libraries but these suffer either
 from obsolescence (e.g. <a href="http://msdn.microsoft.com/en-us/library/system.runtime.serialization.formatters.binary.binaryformatter.aspx">BinaryFormatter</a>) 
-or are painfully slow (<a href="http://msdn.microsoft.com/en-us/library/system.runtime.serialization.netdatacontractserializer.aspx">NetDataContractSerializer</a>).</p>
+or performance (<a href="http://msdn.microsoft.com/en-us/library/system.runtime.serialization.netdatacontractserializer.aspx">NetDataContractSerializer</a>).</p>
 
 <p>Many third-party libraries have emerged attempting to address the issue of performance, some with success.
 However, experience shows that such libraries hardly achieve the level of generalization
@@ -108,7 +108,7 @@ continuation monad. To be able to distribute continuations, you need to be able 
 serialize closures. The inherently intrinsic and arbitrary nature of closures means 
 that they are not supported by most serialization libraries.
 Initially we started using NetDataContractSerializer as our library of choice,
-but that eventually took its toll on overall framework performance,
+but that eventually took its toll on overall performance,
 so we decided to build a new library from scratch.</p>
 
 <p>FsPickler was created with two goals in mind: performance and completeness.
@@ -117,14 +117,16 @@ if it is a .NET object designed to be serialized, it should be serializable in F
 In that sense, it was designed with a goal to embrace the imperfect world that is
 the .NET framework in its totality, albeit with an eye for correctness.</p>
 
-<p>At this point, I should acknowledge Anton Tayanovskyy and his great little F#
+<p>At this point, we should acknowledge Anton Tayanovskyy and his great little F#
 snippet <a href="http://www.fssnip.net/6u">Union-Friendly Generic Binary Serializer</a>
 which served as the initial inspiration for this library.</p>
 
-<h2>Picklers and Pickler Combinators</h2>
+<h2>Pickler Combinators</h2>
 
-<p>FsPickler is founded on the functional programming notion of picklers and
-pickler combinators. A <em>pickler</em> is essentially the type:</p>
+<p>FsPickler is founded on the functional programming notion of picklers and pickler combinators. 
+The concept was originally described in Andrew Kennedy's 
+<a href="http://research.microsoft.com/pubs/64036/picklercombinators.pdf">Pickler Combinators</a>.
+A pickler is essentially the type:</p>
 
 <table class="pre"><tr><td class="lines"><pre class="fssnip">
 <span class="l">1: </span>
@@ -144,12 +146,13 @@ pickler combinators. A <em>pickler</em> is essentially the type:</p>
 </tr>
 </table>
 
-<p>The <code>Write</code> and <code>Read</code> functions represent serialization and deserialization implementations
-for values of type <code>'T</code>. The <code>WriteState</code> and <code>ReadState</code> objects enclose serialization state,
-such target/source streams and things like object id generators.</p>
+<p>The <code>Write</code> and <code>Read</code> functions represent serialization and deserialization 
+implementations for values of type <code>'T</code>. When compared to prevailing .NET serialization patterns, 
+picklers are exceptionally fast since they directly handle the serialized value
+without any reliance on reflection-based resolution.</p>
 
-<p><em>Pickler combinators</em> are functions that operate on picklers, generating picklers of more complex types.
-For instance, the following could be a pickler combinator for rank-1 arrays:</p>
+<p>Pickler combinators are functions that operate on picklers, generating picklers of more complex types. 
+For instance, the following could be a pickler combinator implementation for rank-1 arrays:</p>
 
 <table class="pre"><tr><td class="lines"><pre class="fssnip">
 <span class="l">1: </span>
@@ -169,35 +172,30 @@ For instance, the following could be a pickler combinator for rank-1 arrays:</p>
 </tr>
 </table>
 
-<p>When compared to prevailing .NET serialization patterns, 
-picklers are exceptionally fast since they are given direct access to the pickled value
-without any reliance on reflection.</p>
+<p>Given a sufficient range of primitive picklers and pickler combinators,
+it is possible to define pickling rules for most essentially serializable .NET types. 
+However, these would still need to be declared manually by their implementor.</p>
 
-<p>Pickler combinators were originally described in Andrew Kennedy's 
-<a href="http://research.microsoft.com/pubs/64036/picklercombinators.pdf">paper of the same name</a>.
-The combinators presented are sufficient for things like algebraic data types,
-but picklers would still have to be composed manually by the implementor.</p>
+<p>FsPickler attempts to solve this by providing an automated pickler generation framework: 
+picklers are generated at runtime and on demand using a combination of reflection and 
+dynamic IL generation. Picklers are cached for future use, hence the cost of generation 
+has a constant price.</p>
 
-<p>FsPickler extends the concept of picklers so that object-oriented features
-of the .NET framework are accommodated: null references, cyclic objects
-and subtype polymorphism.</p>
-
-<p>FsPickler is essentially an automated pickler generation framework: picklers are generated at runtime
-and on demand using a combination of reflection and dynamic IL generation. Picklers are cached for 
-future use, hence the cost of generation has a constant price.</p>
+<p>Moreover, FsPickler extends the concept of picklers so that features particular to the
+.NET framework are accommodated: object orientation and subtype polymorphism, 
+null references and cyclic objects.</p>
 
 <p>It should be mentioned for the sake of completeness that a 
 <a href="http://lampwww.epfl.ch/~hmiller/files/pickling.pdf">similar effort</a> 
 has been undertaken by the Scala community. There are differences of approach however, 
-since that library utilizes the metaprogramming facility offered by scala.</p>
+since this mostly relies on the metaprogramming facility offered by scala.</p>
 
 <h2>Serializable Types</h2>
 
 <p>So what qualifies as a serializable type in FsPickler?
-The short answer would be any type <code>'T</code> for which we present an instance of type <code>Pickler&lt;'T&gt;</code>.
-To make the question more meaningful, it should be rephrased to this:
-for what types does FsPickler auto-generate picklers?
-This is something that can only be answered at runtime, 
+The short answer would be any type <code>'T</code> for which we present an instance of <code>Pickler&lt;'T&gt;</code>.
+To make the question more meaningful, we should really be asking what types can receive
+auto-generated picklers. This is something that can only be answered at runtime,
 typically by calling</p>
 
 <table class="pre"><tr><td class="lines"><pre class="fssnip">
@@ -217,14 +215,13 @@ typically by calling</p>
 </pre>
 </td>
 <td class="snippet"><pre class="fssnip">
-<span onmouseout="hideTip(event, 'fs26', 50)" onmouseover="showTip(event, 'fs26', 50)" class="i">FsPickler</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs28', 51)" onmouseover="showTip(event, 'fs28', 51)" class="i">IsSerializableType</span><span class="o">&lt;</span><span onmouseout="hideTip(event, 'fs4', 52)" onmouseover="showTip(event, 'fs4', 52)" class="i">SomeType</span><span class="o">&gt;</span>()</pre>
+<span onmouseout="hideTip(event, 'fs26', 50)" onmouseover="showTip(event, 'fs26', 50)" class="i">FsPickler</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs28', 51)" onmouseover="showTip(event, 'fs28', 51)" class="i">IsSerializableType</span><span class="o">&lt;</span><span onmouseout="hideTip(event, 'fs4', 52)" onmouseover="showTip(event, 'fs4', 52)" class="i">SomeType</span><span class="o">&gt;</span> ()</pre>
 </td>
 </tr>
 </table>
 
-<p>Primitive types and <code>string</code> are serializable
-but pointers, COM objects and <code>MarshalByRefObject</code> types are not.
-A composite type is serializable if and only if it carries the <code>Serializable</code> attribute
+<p>Primitive types and <code>string</code> are serializable but pointers, COM objects and MarshalByRef types are not.
+A managed class or struct is serializable if and only if it carries the <code>Serializable</code> attribute
 and moreover satisfies either of the following:</p>
 
 <ul>
@@ -233,7 +230,7 @@ and moreover satisfies either of the following:</p>
 <li><p>implements the <code>ISerializable</code> attribute and has a matching constructor implementation.</p></li>
 <li><p>carries the <code>DataContract</code> attribute and all designated properties are of 
 serializable type and settable. Parameterless constructors or public properties are not required.</p></li>
-<li><p>carries the <code>CustomPickler</code> attribute and an accompanying pickler factory method.</p></li>
+<li><p>carries the <code>[CustomPickler](reference/nessos-fspickler-custompicklerattribute.html)</code> attribute and an accompanying pickler factory method.</p></li>
 <li>is neither of the above and all designated fields are of serializable type.
 Parameterless constructors or public fields are not required.</li>
 </ul>
