Update generated documentation for version 0.9.11

--- a/overview.html
+++ b/overview.html
@@ -230,7 +230,7 @@ and moreover satisfies either of the following:</p>
 <li><p>implements the <code>ISerializable</code> attribute and has a matching constructor implementation.</p></li>
 <li><p>carries the <code>DataContract</code> attribute and all designated properties are of 
 serializable type and settable. Parameterless constructors or public properties are not required.</p></li>
-<li><p>carries the <code>[CustomPickler](reference/nessos-fspickler-custompicklerattribute.html)</code> attribute and an accompanying pickler factory method.</p></li>
+<li><p>carries the <a href="reference/nessos-fspickler-custompicklerattribute.html"><code>CustomPickler</code></a> attribute and an accompanying pickler factory method.</p></li>
 <li>is neither of the above and all designated fields are of serializable type.
 Parameterless constructors or public fields are not required.</li>
 </ul>
