--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
-    <title>FsPickler : A serializer for .NET
+    <title>FsPickler : A fast .NET object serializer
 </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="description" content="A general-purpose serialization library for .NET"/>
@@ -33,9 +33,10 @@
       <div class="row">
         <div class="span9" id="main">
           
-<h1>FsPickler : A serializer for .NET</h1>
+<h1>FsPickler : A fast .NET object serializer</h1>
 
-<p>FsPickler is a general-purpose serialization library that focuses on completeness and performance. 
+<p>FsPickler is a serialization library that facilitates the distribution of .NET objects.
+The implementation focuses on performance and completeness in supported types, including F# types.
 It supports multiple, pluggable serialization formats including Binary, Xml, JSON and BSON.
 The library is based on the functional programming concept of 
 <a href="http://lambda-the-ultimate.org/node/2243">pickler combinators</a>
