--- a/overview.html
+++ b/overview.html
@@ -60,10 +60,12 @@ and naturally inefficient approaches.</p></li>
 
 <ul>
 <li><p>Field-based serialization: objects are pickled by serializing the contents 
-of their fields. This behaviour is tuned by applying an assortment of attributes
-such as <code>Serialized</code>, <code>NonSerialized</code>, <code>OnSerializing</code>, <code>OnDeserialized</code> and
-the <code>IDeserializationCallback</code> interface. This is arguably the most
-problematic approach, since it is sensitive to internal implementation details.
+of their fields. This behaviour is tuned by applying an assortment of attributes such as
+<a href="http://msdn.microsoft.com/en-us/library/system.nonserializedattribute.aspx"><code>NonSerialized</code></a>,
+<a href="http://msdn.microsoft.com/en-us/library/system.runtime.serialization.onserializingattribute.aspx"><code>OnSerializing</code></a>,
+<a href="http://msdn.microsoft.com/en-us/library/system.runtime.serialization.ondeserializedattribute.aspx"><code>OnDeserialized</code></a>
+and the <a href="http://msdn.microsoft.com/en-us/library/system.runtime.serialization.ideserializationcallback.aspx"><code>IDeserializationCallback</code></a>
+interface. This is arguably the most problematic approach, since it is sensitive to internal implementation details.
 Incidentally, this is the pattern of choice for most F# types.</p></li>
 <li><p>Property-based or <a href="http://msdn.microsoft.com/en-us/library/ms733127.aspx">DataContract</a> 
 serialization: objects are pickled by serializing the contents
